# basis-choice

./: .gitignore  CMakeLists.txt  README.md  flamegraph.sh  scripts.make
lib/: basis_choice.h
src/: basis_choice.h  main.cpp
test_data/: AUG2D.mtx  AUG3DC.mtx  CONT-050.mtx  CONT-100.mtx  CONT-101.mtx  CONT-200.mtx  CONT-201.mtx  CVXQP1_L.mtx  CVXQP1_M.mtx  CVXQP1_S.mtx  CVXQP2_L.mtx  CVXQP2_M.mtx  CVXQP2_S.mtx  CVXQP3_L.mtx  CVXQP3_M.mtx  CVXQP3_S.mtx  DPKLO1.mtx  DTOC3.mtx  DUAL1.mtx  DUAL2.mtx  DUAL3.mtx  DUAL4.mtx  DUALC1.mtx  DUALC2.mtx  DUALC5.mtx  DUALC8.mtx  GENHS28.mtx  GOULDQP2.mtx  HS118.mtx  HS21.mtx  HS35.mtx  HS53.mtx  HS76.mtx  HUESTIS.mtx  KSIP.mtx  LASER.mtx  LISWET1.mtx  LOTSCHD.mtx  MOSARQP1.mtx  MOSARQP2.mtx  (+76 more)
